--- a/sa_portal_rh/src/app/views/curriculos/curriculos.component.html
+++ b/sa_portal_rh/src/app/views/curriculos/curriculos.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let curriculo of curriculos">
     <div class="card">
       <div class="card-body">
-        <img src="https://www.colorhexa.com/ffa8c8.png" alt="">
+        <img src="https://encycolorpedia.pt/002d62.png" alt="">
         <h5 class="card-title">Código do Currículo: {{ curriculo.id }}</h5>
         <h5 class="card-title">Curriculo: {{ curriculo.nome }}</h5>
         <p class="card-text">Formação: {{ curriculo.formacao }}</p>
