--- a/sa_portal_rh/src/app/templates/footer/footer.component.scss
+++ b/sa_portal_rh/src/app/templates/footer/footer.component.scss
@@ -1,9 +1,9 @@
 .footer {
-  background-color: #ffd4e4;
+  background-color: #002D62;
   color: #fff;
   padding: 10px;
   text-align: center;
-  position:inherit;
+  position: fixed;
   bottom: 0;
   width: 100%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
