--- a/sa_portal_rh/src/app/templates/header/header.component.scss
+++ b/sa_portal_rh/src/app/templates/header/header.component.scss
@@ -4,15 +4,15 @@
   justify-content: space-around;
   align-items: center;
   padding: 1rem 1.5rem;
-  background-color: #ffa6c8;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  background-color: #002D62;
+  
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 2rem;
 
   a {
     text-decoration: none;
     color: #ffffff;
-    font-weight: bold;
+    font-weight: 600;
   }
 
   .navItens {
@@ -20,22 +20,42 @@
     gap: 1.5rem;
 
     .navLink {
-      color: #d85c8c;
+      color: #ffffff;
       padding: 0.5rem 0;
       transition: color 0.3s ease; //trasição suave da cor
 
       &:hover {
-        color: #8f3e5d;
+        color: #b8b8b8;
+      }
+    }
+
+    
+
+    button.navLink {
+      background: transparent;
+      border: none;
+      padding: 0;
+      cursor: pointer;
+      font: inherit; // herda fonte da navbar
+
+      i {
+        color: inherit; // herda a cor da navLink
+        font-size: 3rem; // ajusta tamanho do ícone
+    
+      }
+
+      &:hover i {
+        color: #b8b8b8; // mesma cor do hover dos links
       }
     }
 
     .small {
       font-size: 1.2rem;  // menor que o padrão de 2rem da navbar
       font-weight: normal;
-      color: #b04e78;
+      color: #b8b8b8;
 
       &:hover {
-        color: #6b2c49;
+        color: #b8b8b8;
       }
     }
   }
