--- a/sa_portal_rh/src/app/views/curriculo-form/curriculo-form.component.scss
+++ b/sa_portal_rh/src/app/views/curriculo-form/curriculo-form.component.scss
@@ -7,15 +7,19 @@ $aviso: #ffff00;
 h2 {
   text-align: center;
   padding: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #444;
+  margin-bottom: 2px;
 }
 
 form {
   max-width: 600px;
   margin: 0 auto;
   padding: 2rem;
+  margin-bottom: 40px;
   border-radius: 8px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border: 1px solid #aaa;
 
   label {
     display: block;
