--- a/sa_portal_rh/src/app/views/curriculo-list/curriculo-list.component.scss
+++ b/sa_portal_rh/src/app/views/curriculo-list/curriculo-list.component.scss
@@ -1,15 +1,16 @@
 :host {
   display: block;
   padding: 2rem;
-  background-color: #f8f9fa;
+  background-color: #ffffff;
   border-radius: 1rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  
 }
 
 h3 {
   font-size: 1.8rem;
   margin-bottom: 1.5rem;
   color: #343a40;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 input {
@@ -23,14 +24,14 @@ input {
 
   &:focus {
     outline: none;
-    border-color: #fa6a9f;
-    box-shadow: 0 0 0 2px #a73d64;
+    border-color: #002D62;
+    box-shadow: 0 0 0 2px #3d62a7;
   }
 }
 
 button {
   padding: 0.6rem 1.2rem;
-  background-color: #fa6a9f;
+  background-color: #002D62;
   color: #fff;
   border: none;
   border-radius: 0.5rem;
@@ -39,7 +40,7 @@ button {
   transition: background-color 0.3s;
 
   &:hover {
-    background-color: #a73d64;
+    background-color: #3d62a7;
   }
 }
 
@@ -47,7 +48,7 @@ button {
   background-color: #ffffff;
   padding: 1rem 1.5rem;
   margin-top: 1.5rem;
-  border-left: 5px solid #fa6a9f;
+  border-left: 5px solid #002D62;
   border-radius: 0.5rem;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
 
