--- a/sa_portal_rh/src/app/views/curriculos/curriculos.component.scss
+++ b/sa_portal_rh/src/app/views/curriculos/curriculos.component.scss
@@ -8,10 +8,10 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   .card{
-    background-color: #fff;
+    background-color: #ececec;
     border-radius: 8px;
     border: 1px solid #e0e0e0;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     width: 18rem;
