--- a/sa_portal_rh/src/app/views/painel-vagas/painel-vagas.component.scss
+++ b/sa_portal_rh/src/app/views/painel-vagas/painel-vagas.component.scss
@@ -1,5 +1,3 @@
-//estilização do painel de vagas
-//declaração de variaveis
 $primaria: #007bff;
 $secundaria: #999;
 $sucesso: #28a745;
@@ -9,15 +7,19 @@ $aviso: #ffff00;
 h2 {
   text-align: center;
   padding: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #444;
+  margin-bottom: 2px;
 }
 
 form {
   max-width: 600px;
   margin: 0 auto;
   padding: 2rem;
+  margin-bottom: 40px;
   border-radius: 8px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border: 1px solid #aaa;
 
   label {
     display: block;
@@ -85,9 +87,10 @@ section {
   max-width: 1300px;
   margin: 10px auto;
   padding: 1rem;
+  padding-top: 0;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid #aaa;
   overflow-x: auto;
 
   .table {
@@ -105,11 +108,12 @@ section {
     }
 
     thead {
-      background-color: #999;
+      background-color: #002D62;
 
       th {
-        color: #222;
+        color: #ffffff;
         font-weight: bold;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
     }
 
@@ -118,6 +122,7 @@ section {
         &:hover {
           background-color: #999;
         }
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
 
       .btn-listar {
