--- a/sa_portal_rh/src/app/views/vagas/vagas.component.scss
+++ b/sa_portal_rh/src/app/views/vagas/vagas.component.scss
@@ -10,8 +10,7 @@
   .card{
     background-color: #fff;
     border-radius: 8px;
-    border: 1px solid #e0e0e0;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    border:2px solid #ddd;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     width: 18rem;
